<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <!--  Cabeçalho -->
    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f3f5f6"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/nao_reconhece"
            android:textColor="#8d8e99"
            android:textSize="18sp" />
    </LinearLayout>
    <!--  Cabeçalho -->


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cabecalho">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="24dp"

                android:gravity="center_horizontal"
                android:text="@string/transacoes_indevidas_resumo"
                android:textColor="@color/colorBlackLight"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="24dp"

                android:gravity="center_horizontal"
                android:text="@string/tran_inde_resumido"
                android:textColor="@color/colorBlackLight"
                android:textSize="18sp" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/texto_central"
                android:textColor="@color/colorYellow" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/change_pin_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:gravity="center"
                    android:text="@string/capitais"
                    android:textColor="#bfbfbf" />

                <Button
                    android:id="@+id/metropolitansPhone"
                    style="@style/AppTheme.ButtonBlueStroke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_one" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:gravity="center"
                    android:text="@string/localidades"
                    android:textColor="#bfbfbf" />

                <Button
                    android:id="@+id/otherLocationsPhone"
                    style="@style/AppTheme.ButtonBlueStroke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_two" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>