<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inv_white_three">


    <!--  Cabeçalho -->
    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="Número 94848747"
            android:textColor="#8d8e99"
            android:textSize="18sp" />
    </LinearLayout>
    <!--  Cabeçalho -->


    <!-- laoding -->
    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="visible">

        <include
            layout="@layout/layout_loading_state"
            android:visibility="gone" />
    </RelativeLayout>

    <!--  corpo -->


    <!--  Cabeçalho -->


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cabecalho"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="1dp"
                android:background="#d8d8d8">


            </View>

            <TextView
                android:id="@+id/txtTransactionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="R$ 120,00"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/big_text_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:text="22 Fev 18:32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:text="Pão de Açucar"
                android:textSize="18sp" />

            <include layout="@layout/custom_virtual_card_small"></include>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/cartao_bloqueio_true"
                android:textColor="@color/colorBlackLight"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/msg_cartao_bloqueio"
                android:textColor="@color/colorBlackLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/msg_cartao_endereco"
                android:textSize="8sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/texto_central"
                android:textColor="@color/colorYellow" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">


                <Button
                    style="@style/AppTheme.ButtonBlueStroke"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/tel_one" />

                <Button
                    style="@style/AppTheme.ButtonBlueStroke"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_two" />

            </LinearLayout>



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <!--  corpo -->


</RelativeLayout>