<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/inv_white_three"
    android:layout_width="match_parent"
    tools:ignore="MissingPrefix"
    android:layout_height="match_parent">



    <!--  Cabeçalho -->
    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f3f5f6"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textColor="#8d8e99"
            android:text="@string/resumo_contestacao"
            fontPath="assets/fonts/OpenSans-Light.ttf"
            android:textSize="18sp" />
    </LinearLayout>
    <!--  Cabeçalho -->


    <!-- laoding -->
    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="visible">

        <include
            layout="@layout/layout_loading_state"
            android:visibility="gone" />
    </RelativeLayout>

    <!--  corpo -->


    <!--  Cabeçalho -->


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/cabecalho">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="1dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlackLight"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/titulo_registro" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="2dp"
                android:background="#d8d8d8">


            </View>

            <TextView
                android:id="@+id/txtTransactionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:text="R$ 120,00" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:text="22 Fev 18:32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="Pão de Açucar" />

            <include  layout="@layout/custom_virtual_card_small">
            </include>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlackLight"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:text="@string/cartao_bloqueio" />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorBlackLight"
            android:gravity="center_horizontal"
            android:text="@string/msg_cartao_bloqueio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="40dp"
                android:textSize="8sp"
                android:gravity="center_horizontal"
                android:text="@string/msg_cartao_endereco" />



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <!--  corpo -->


    <!--  rodape -->
    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="#1BB3BC"
        android:padding="10dip">

        <TextView
            android:id="@+id/button_constentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/registro_contestacao"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
    <!--  rodape -->


</RelativeLayout>