<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <!--  Cabeçalho -->
    <RelativeLayout
        android:id="@+id/cabecalho"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f3f5f6"
        android:padding="10dip">

        <TextView
            android:id="@+id/valor_transacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/colorBlack"
            android:text="R$ 120,00 em 2x"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/data_transacaoo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="28 Fev 18:32"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nome_estabelecimento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_below="@+id/valor_transacao"
            android:text="Pao de Açúcar"
            android:textSize="12sp" />

    </RelativeLayout>
    <!--  Cabeçalho -->


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cabecalho">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_horizontal"
                android:text="@string/transacoes_indevidas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:text="@string/confirmar_bloqueio" />




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



    <LinearLayout
        android:id="@+id/change_pin_footer"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginRight="@dimen/default_margin"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/metropolitansPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    style="@style/AppTheme.ButtonBlueStroke"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/otherLocationsPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bloquear"
                    style="@style/AppTheme.ButtonBlueStroke"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>